Revision history for MooX-NewDefaults

{{$NEXT}}
 - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +14 ↑3 -3 (recommends: +1, suggests: ↑2)
 - test: +1 ↓1 (recommends: +1 ↑1 ↓1)

0.001001 2014-08-16T17:59:02Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - tests updated.
 - metadata updated.

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 ↑1 (suggests: ↑2)
 - test: +1 -3 (recommends: ↑1 -1)

 [Tests]
 - update Test::ReportPrereqs Tests

0.001000 2014-06-06T15:02:57Z
 - Initial release
 - Code inspired / API compatible with MooseX::NewDefaults
 - Docs and some tests stolen there.
 - Copyright assigned there too because #yolo